--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 language: python
 python:
   - "3.8"
-  - "nightly"
+ // - "nightly"
 install:
   - "pip install pytest"
   - "pip install -r requirements.txt"
